z-index fix on selector

--- a/css/football.css
+++ b/css/football.css
@@ -91,7 +91,7 @@ body {
 .weekSelector {
   min-height: 28px;
   top: 50px;
-  /* z-index: -1; */
+  z-index: 1029;
 }
 .weekSelector-text {
   margin-top: 3px;
